modificacion de estilos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <section id="hero">
 
-        <div class="image-container">
+        <div class="image-container" id="computadora">
             <img src="img/computadora.jpg" alt="computadora">
         </div>
 
@@ -36,7 +36,7 @@
     </section>
 
     <main>
-        <p>Lorem ipsum, dolor sit amet consecteturddeeeegit adipisicing elit. Id fuga sed accusamus! Expedita provident nostrum eligendi! Iure accusamus nulla soluta accusantium quos vitae quasi quis nostrum fuga quas! Debitis, mollitia?</p>
+        <p>Lorem ipsum, dolor sit amet consecteturddeeeegit adipisicing elit. Id fuga sed accusamus! Expedita provident nostrum eligendi! Iure accusamus nulla soluta accusantium quos vitae quasi quis nostrum fuga quas! Debitis, mollitia? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis minima odit officiis, soluta nostrum quia illo possimus non beatae consectetur reprehenderit harum fugiat nam, sit a eveniet eaque ipsa laborum!</p>
         
     </main>
     <footer>
