Acomodo de los iconos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <footer id="footer-container">
         <ul class="social-icons" >
             <li>
-                <a href="www.linkedin.com/in/cristianespe" class="social-icon" id="LinkedIn">
+                <a href="https://www.linkedin.com/in/cristianespe/" class="social-icon" id="LinkedIn">
                     <img src="img/linkedin.png" alt="LinkedIn">
                 </a>
             </li>
