Adicion de nueva imagen y correccion de ortografia

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <div class="info-container">
 
             <div class="image-container" id="foto">
-                <img src="img/IMG_0179.JPG" alt="My picture">
+                <img src="img/IMG_0294.JPG" alt="My picture">
             </div>
 
             <div class="info">
-                <h1>Cristian Michael Espjel Iglesias</h1>
+                <h1>Cristian Michael Espejel Iglesias</h1>
                 <span>@CristianMEspe </span>
 
                 <p>Frontend Developer || Backend Developer || UX Designer  .</p>
