--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
 
     <main>
-        <p>Hola soy Cristian, un Fullstack Developer, soy amante de la tecnologia, amo resolver problemas con ella, mi laptop es mi mejor compañera.</p>
+        <p>Hola soy Cristian, un Fullstack Developer, soy amante de la tecnologia, amo resolver problemas con ella, mi laptop es mi mejor compañera. Contribuyo activamente en cada etapa de su construcción para obtener el mejor resultado posible. Una buena impresión del producto para los usuarios finales puede definir el éxito y el amor por él.</p>
         
     </main>
     <footer id="footer-container">
