--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h1>Cristian Michael Espejel Iglesias</h1>
                 <span>@CristianMEspe </span>
 
-                <p>Frontend Developer || Backend Developer || UX Designer  .</p>
+                <p>Frontend Developer || Backend Developer.</p>
             </div>
         </div>
     </section>
